--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
   <body>
 
     <header>
-      <h2></h2>
+      <h2><a href="#">Mountain Travel</a></h2>
       <nav>
-
+        <li><a href="#">Tours</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
       </nav>
     </header>
+
+    <section class="hero">
+      <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
+      <div class="hero-content-area">
+        <h1>Mountain Tavel</h1>
+        <h3>Unmissable Adventure Tours Around The World</h3>
+        <a href="#" class="btn">Contact Us Now</a>
+      </div>
+    </section>
 
   </body>
 </html>
