--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Mountain Travel</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+
   </head>
   <body>
 
@@ -26,6 +28,62 @@
         <h3>Unmissable Adventure Tours Around The World</h3>
         <a href="#" class="btn">Contact Us Now</a>
       </div>
+    </section>
+
+    <section class="destinations">
+      <h3 class="title">Some of our destinations:</h3>
+      <p>Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures. Here are some pictures from people who have had elevated experiences with us.</p>
+      <hr>
+      <ul class="grid">
+        <li class="small" style="background-image: url('assets/img/mountain1.jpg');"></li>
+
+        <li class="large" style="background-image: url('assets/img/mountain2.jpg');"></li>
+
+        <li class="large" style="background-image: url('assets/img/mountain3.jpg');"></li>
+
+        <li class="small" style="background-image: url('assets/img/mountain4.jpg');"></li>
+      </ul>
+    </section>
+
+    <section class="packages">
+      <h3 class="title">Tour Packages</h3>
+      <p>We offer a variety of mountaineering packages. Whether you've climbe
+      Everest of don't even know what a mountain is, we've got the perfect vacation for you.</p>
+      <hr>
+
+      <ul class="grid">
+        <li>
+          <i class="fa fa-compass fa-4x"></i>
+          <h4>Guided Trips</h4>
+          <p>Looking for the complete experience? Take a tour with one of our experts. They'll show you secrets that you're likely to miss otherwise.</p>
+        </li>
+        <li>
+          <i class="fa fa-camera-retro fa-4x"></i>
+          <h4>Photo Trips</h4>
+          <p>Want to experience nature's beauty without all of that annoying exercise? Take a photo tour on one of our mountain buses.</p>
+        </li>
+        <li>
+          <i class="fa fa-bicycle fa-4x"></i>
+          <h4>Biking Trips</h4>
+          <p>If bicycles ara more your speed, consider taking a tour through one of our mountain bike paths. We'll provide the bikes, and lunch too!</p>
+        </li>
+        <li>
+          <i class="fa fa-flag-checkered fa-4x"></i>
+          <h4>Racing Trips</h4>
+          <p>Got a competitive spirit? Sign up for one of out mountain marathons! Try to reach the summit before anyone else.</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="testimonials">
+      <h3 class="title">Testimonials from our adventurers:</h3>
+      <hr>
+      <p class="quote">Wow! That tour made me realize how much I love moutains. After going on one of these tours, I can safely say that they are my favorite geographic feauture, and my favorite word that starts with M.</p>
+      <p class="author">- Misael Calvillo</p>
+      <p class="quote">I never understood why people cared so much about mountains. But then I went on one of these tours. Now I can't understand people who <em>don't</em> care about mountains!</p>
+      <p class="author">- Daniel Calvillo</p>
+      <p class="quote">If you want to understand the universe, head to the mountains. I mean, seariously. It's like whoa. You know? It's like that.</p>
+      <p class="author">- Antonio Mancilla</p>
     </section>
 
   </body>
